Fix delete button visibility

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,6 +25,16 @@ body {
     align-items: center;
 }
 
+.flex-start {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.flex-end {
+    display: flex;
+    justify-content: flex-end;
+}
+
 .flex {
     display: flex;
     gap: 10px;
